--- a/resource/template/login.html
+++ b/resource/template/login.html
@@ -841,8 +841,8 @@
         })();
       </script>
       <footer class="oai-footer">
-        <a href="https://xyhelper.cn" target="_blank"
-          >XYHELPER</a
+        <a href="https://3-wins.cn/chatgpt" target="_blank"
+          >3-WINS.CN</a
         >
       </footer>
     </div>
